# Dev_Audio

./: CMakeLists.txt  CMakeSettings.json  MyCodeMacros.cmake  MyGlobalImports.cmake  README.md
Test/: CMakeLists.txt
audio-test/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  DemoOne_demo1.cpp  DemoOne_demo2.cpp  TestOne.h  TestOne_run1.cpp  TestOne_run2.cpp  TestOne_run3.cpp  TestOne_run4.cpp  auPlay.cpp  auPlay.h
opus-test/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  Main.cpp  MainInit.cpp  RecorderState.cpp  RecorderState.h  TestOne.h  TestOne_info.cpp  TestOne_play1.cpp  TestOne_play2.cpp  TestOne_rec1.cpp  TestOne_rec2.cpp  TestOne_rec3.cpp  TestOne_run1.cpp  TestOne_run2.cpp  TestOne_run3.cpp  TestOne_sin1.cpp  cmnPriorities_win.cpp  someScriptRunnerThread.h  someScriptRunnerThread_exec.cpp  someScriptRunnerThread_run_script.cpp  someScriptRunnerThread_thread.cpp  stdafx.h
opusenc_example/: CMakeLists.txt
stash/: TestOne_rec3.cpp
